Added homapage while running

--- a/BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/BulkyWeb/Views/Shared/_Layout.cshtml
@@ -57,9 +57,9 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted bg-primary">
+    <footer class="border-top footer bg-primary footor-text-white">
         <div class="container text-center">
-            Made by <i class="bi bi-person-check"></i> SubodhLamsonge
+            Made by <i class="bi bi-person-check"></i> <b>SubodhLamsonge</b>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
