--- a/BulkyWeb/wwwroot/css/site.css
+++ b/BulkyWeb/wwwroot/css/site.css
@@ -537,3 +537,7 @@ bg-success {
         background-color: #578553;
         border-color: #578553;
     }
+
+    .footor-text-white{
+        color:white;
+    }
